Some additional code to compare jamm lib object sizes vs. JOL